--- a/PdfTextMask/packages.config
+++ b/PdfTextMask/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="iTextSharp" version="5.5.11" targetFramework="net452" />
-  <package id="itextsharp.xtra" version="5.5.11" targetFramework="net452" />
+  <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net48" />
+  <package id="iTextSharp" version="5.5.13.4" targetFramework="net48" />
+  <package id="itextsharp.xtra" version="5.5.13.4" targetFramework="net48" />
 </packages>
